# AI-Vision-Studio

./: .sesskey  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
assets/: script.js  script_v2.js  style.css
core/: __init__.py  animal_detector.py  models.py  processor.py  utils.py
